# ai-code-terminal

./: .dockerignore  .gitignore  CACHE_BUSTING.md  CLAUDE.md  DESIGN_CONTAINERIZATION.md  Dockerfile  LICENSE  README.md  background_autonomous_tasks.md  docker-compose.yml  init.sh  last_conversation.md  netlify.toml  next_steps_guide.md  normal_user_flow.md  package-lock.json  package.json  publish.sh  server.js  start.sh  test-cache-busting.js  vitest.config.js
.github/workflows/: android-release.yml  pr-tests.yml
__mocks__/@octokit/: rest.js
__tests__/controllers/: health.controller.test.js
__tests__/middleware/: security.middleware.test.js
__tests__/services/: github.service.test.js  resource.service.test.js  settings.service.test.js  shell.service.test.js  theme.service.test.js  workspace.service.test.js
app/: CLAUDE.md  Dockerfile  docker-compose-dev.yml  docker-compose.yml  env.example  index.html  init.sh  jest.config.js  jest.setup.js  package-lock.json  package.json  publish.sh  server.js  test-codemirror.js
app/prisma/: schema.prisma
book/: PROJECT_STRUCTURE.md  outline.md
cli/: .npmignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN_SPECIFICATION.md  LICENSE  README.md  SECURITY.md  TECHNICAL_REQUIREMENTS.md  TROUBLESHOOTING.md  jest.config.js  jest.setup.js  package-lock.json  package.json  test.txt
docs/: hugo.toml
editor/: package-lock.json  tsconfig.json  vite.config.ts
frontend/: .dockerignore  README.md  build.sh  package.json  pubspec.yaml
prisma/: schema.prisma
rust/: AGENTS.md  GAPS_AND_ACTIONS.md  README.md  USER_JOURNEYS.md  checklist.md  improvement_plan.md  plan.md  transformation_checklist.md
rust/backend/: .dockerignore  .env.example  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.optimized  README.md  cobertura.xml  docker-compose.yml  run.sh
rust/backend/.sqlx/: query-0c08b67e681006957d9bf1d3963c51b4c4a8200fb9c7c9fbede1c672e85fab89.json
rust/backend/crates/act-cli/: Cargo.toml
rust/backend/crates/act-cli/src/: main.rs
rust/backend/crates/act-core/: Cargo.toml  README.md
rust/backend/crates/act-core/src/: auth.rs  db.rs  error.rs  events.rs  events_tests.rs  filesystem.rs  lib.rs  models.rs  pty.rs  repository.rs  security.rs  security_tests.rs  theme.rs  user_preferences.rs
rust/backend/crates/act-domain/: Cargo.toml  README.md
rust/backend/crates/act-domain/src/: auth_service.rs  encryption_service.rs  git_service.rs  github_service.rs  layout_service.rs  lib.rs  microsoft_auth_service.rs  microsoft_auth_types.rs  microsoft_graph_client.rs  process_recovery_service.rs  process_service.rs  process_service_tests.rs  session_service.rs  system_service.rs  task_attachment_service.rs  task_context_parser.rs  task_execution_service.rs  task_priority_service.rs  task_sync_service.rs  theme_service.rs  todo_sync_service.rs  user_preferences_service.rs  workspace_service.rs
rust/backend/crates/act-domain/tests/: auth_service_tests.rs  session_service_integration.rs  session_service_tests.rs  workspace_service_tests.rs
rust/backend/crates/act-persistence/: Cargo.toml
rust/backend/crates/act-persistence/src/: auth_repository.rs  error.rs  layout_repository.rs  lib.rs  metrics_repository.rs  microsoft_auth_repository.rs  process_repository.rs  session_repository.rs  theme_repository.rs  user_preferences_repository.rs  workspace_repository.rs
rust/backend/crates/act-persistence/tests/: auth_repository_tests.rs
rust/backend/crates/act-process/: Cargo.toml
rust/backend/crates/act-process/src/: lib.rs
rust/backend/crates/act-pty/: Cargo.toml  README.md
rust/backend/crates/act-pty/src/: events.rs  lib.rs  service.rs  session.rs
rust/backend/crates/act-server/: Cargo.toml
rust/backend/crates/act-server/data/: act.db-shm  act.db-wal
rust/backend/crates/act-server/src/: app_state.rs  config.rs  error.rs  main.rs  metrics.rs  metrics_placeholder.rs  models.rs  socket.rs  socket_handlers.rs  system_monitor.rs  utils.rs  websocket.rs
rust/backend/crates/act-server/src/middleware/: auth.rs  cors.rs  csrf.rs  logging.rs  mod.rs  sso_auth.rs
rust/backend/crates/act-server/src/routes/: api.rs  auth.rs  auth_old.rs  files.rs  files_old.rs  github.rs  health.rs  layouts.rs  metrics.rs  microsoft_auth.rs  mod.rs  processes.rs  sessions.rs  sso_auth.rs  system.rs  task_executions.rs  themes.rs  todo_sync.rs  user_preferences.rs  workspaces.rs
rust/backend/crates/act-server/src/services/: auth.rs  filesystem.rs  github.rs  github_adapter.rs  layout.rs  metrics.rs  mod.rs  process.rs  pty.rs  session.rs  settings.rs  theme.rs  workspace.rs
rust/backend/crates/act-server/src/sso/: client.rs  mod.rs  types.rs
rust/backend/crates/act-vfs/: Cargo.toml  README.md
rust/backend/crates/act-vfs/src/: filesystem.rs  lib.rs  types.rs
rust/backend/examples/: cli_tool.rs
rust/backend/migrations/: 0001_initial_schema.sql  0002_add_current_workspace_preference.sql  0002_add_missing_schema.sql  0002_sso_migration.sql  0003_add_git_columns.sql  0003_add_layout_preferences.sql  0004_fix_github_repo_constraint.sql  0004_microsoft_auth.sql  0004_microsoft_auth_down.sql  0005_add_process_info_table.sql  0005_task_sync.sql  0005_task_sync_down.sql  0006_multi_user_refactor.sql  0006_oauth_state.sql  0006_oauth_state_down.sql  0007_process_user_constraint.sql  0007_token_refresh_locks.sql  0007_token_refresh_locks_down.sql  0008_add_metrics_tables.sql  0008_sync_error_improvements.sql  0008_sync_error_improvements_down.sql  0009_hierarchical_layouts.sql  0010_simplify_layouts.sql  test_rollback.sh
rust/desktop/src-tauri/: Cargo.toml  tauri.conf.json
rust/desktop/src-tauri/capabilities/: default.json
rust/desktop/src-tauri/src/: lib.rs
scripts/: check-loc.sh  git-credential-oauth
src/: app.js
tests/: README.md  comprehensive.test.js  coverage-focused.test.js  setup.js  validation-middleware.test.js
tools/: README.md  debug_ms_todo.py  dev.mjs  generate_sso_token.py
website/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  hugo.toml  hugo_stats.json  index.html  package-lock.json  package.json  version.json
(+590 files in other folders)
