[workspace]
members = [
    "crates/act-core",
    "crates/act-pty",
    "crates/act-vfs",
    "crates/act-domain",
    "crates/act-persistence",
    "crates/act-process",
    "crates/act-server",
    "crates/act-cli",
]

# Set act-server as the default package for cargo run
default-members = ["crates/act-server"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["ACT Contributors"]
license = "MIT"
repository = "https://github.com/your-org/act"
homepage = "https://act-terminal.io"
documentation = "https://docs.act-terminal.io"
keywords = ["terminal", "development", "ide"]
categories = ["development-tools"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "tower-log"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Real-time communication
socketioxide = { version = "0.14", features = ["extensions"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "chrono", "uuid"] }

# Terminal emulation
portable-pty = "0.8"

# Authentication (SSO JWT validation requires jsonwebtoken for RS256)
jsonwebtoken = { version = "9.3", features = ["use_pem"] }
oauth2 = "4.4"

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.7"
async-trait = "0.1"

# System monitoring
sysinfo = "0.32"
nix = { version = "0.29", features = ["fs"] }

# HTTP client for GitHub API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# URL encoding
urlencoding = "2.1"

# JSON handling
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }