[package]
name = "act"
version = "0.1.0"
description = "AI Code Terminal Desktop Application"
authors = ["ACT Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "act_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Backend server runtime - we'll launch this as a subprocess
tokio = { version = "1.40", features = ["full"] }

# Process management
sysinfo = "0.32"

# Directories
dirs = "5.0"


# Error handling
anyhow = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }

