[package]
name = "act-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }