[package]
name = "act-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
serde_test = "1.0"