[package]
name = "act-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
act-core = { path = "../act-core" }
act-pty = { path = "../act-pty" }
act-vfs = { path = "../act-vfs" }

# Standard dependencies
uuid = { workspace = true }
chrono = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Logging
tracing = { workspace = true }
