[package]
name = "act-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
act-core = { path = "../act-core" }
act-pty = { path = "../act-pty" }
act-vfs = { path = "../act-vfs" }

# Standard dependencies
uuid = { workspace = true }
chrono = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Logging
tracing = { workspace = true }

# HTTP client for Microsoft Graph API
reqwest = { workspace = true }
url = { workspace = true }

# OAuth for Microsoft authentication
oauth2 = { workspace = true }

# Cryptography for token encryption
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = "0.4"

# Text processing for task context parsing
regex = "1.10"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
