[package]
name = "act-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
act-core = { path = "../act-core" }
act-domain = { path = "../act-domain" }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }