[package]
name = "act-process"
version = "0.1.0"
edition = "2021"

[dependencies]
act-core = { path = "../act-core" }
tokio = { version = "1.40", features = ["full"] }
tokio-process = "0.2"
async-trait = "0.1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }