[package]
name = "act-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "act-server"
path = "src/main.rs"

[dependencies]
# Local crates
act-core = { path = "../act-core" }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Real-time communication
socketioxide = { workspace = true }

# Database
sqlx = { workspace = true }

# Terminal emulation
portable-pty = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }

# Configuration
figment = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }

# HTTP client for GitHub API
reqwest = { workspace = true }
url = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# URL encoding
urlencoding = { workspace = true }

# JSON handling
serde_json = { workspace = true }

# System information
sysinfo = "0.30"