[package]
name = "act-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "act-server"
path = "src/main.rs"

[dependencies]
# Local crates
act-core = { path = "../act-core" }
act-pty = { path = "../act-pty" }
act-vfs = { path = "../act-vfs" }
act-domain = { path = "../act-domain" }
act-persistence = { path = "../act-persistence" }
act-process = { path = "../act-process" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum_csrf = { version = "0.7", features = ["layer"] }

# Real-time communication
socketioxide = { workspace = true }
tokio-tungstenite = "0.21"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }

# Database
sqlx = { workspace = true }

# Terminal emulation
portable-pty = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }

# Configuration
figment = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }

# HTTP client for GitHub API
reqwest = { workspace = true }
url = { workspace = true }

# Encryption
aes-gcm = { workspace = true, features = ["std"] }
base64.workspace = true
rand = { workspace = true }
constant_time_eq = "0.3"
sha2 = "0.10"

# URL encoding
urlencoding = { workspace = true }

# JSON handling
serde_json = { workspace = true }

# System information
sysinfo = { workspace = true }
nix = { workspace = true }

# Static storage
lazy_static = "1.4"
hex = "0.4.3"
