[package]
name = "act-vfs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core domain
act-core = { path = "../act-core" }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Path utilities
walkdir = "2.5"

# File metadata
chrono = { workspace = true }